objects/OUV_Forecast_Detail__c.object
<CustomObject>
    <label>OUV Forecast Snapshot Detail</label>
    <nameField>
        <displayFormat>FD-{0000000}</displayFormat>
        <label>OUV Forecast Snapshot Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Forecast Snapshot Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>OUV_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jaguar</fullName>
                </value>
                <value>
                    <fullName>Land Rover</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <formula>OUV_Forecast_Snapshot__r.OUV_Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Month__c</fullName>
        <formula>TEXT(OUV_Forecast_Snapshot__r.OUV_Snapshot_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_MayForecast__c</fullName>
        <label>May Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_JulyForecast__c</fullName>
        <label>July Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_JuneForecast__c</fullName>
        <label>June Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Line__c</fullName>
        <label>Vehicle Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X760</fullName>
                </value>
                <value>
                    <fullName>X260</fullName>
                </value>
                <value>
                    <fullName>X351</fullName>
                </value>
                <value>
                    <fullName>X152</fullName>
                </value>
                <value>
                    <fullName>X761</fullName>
                </value>
                <value>
                    <fullName>X540</fullName>
                </value>
                <value>
                    <fullName>X590</fullName>
                </value>
                <value>
                    <fullName>L405</fullName>
                </value>
                <value>
                    <fullName>L460</fullName>
                </value>
                <value>
                    <fullName>L461</fullName>
                </value>
                <value>
                    <fullName>L494</fullName>
                </value>
                <value>
                    <fullName>L550</fullName>
                </value>
                <value>
                    <fullName>L462</fullName>
                </value>
                <value>
                    <fullName>L560</fullName>
                </value>
                <value>
                    <fullName>L663</fullName>
                </value>
                <value>
                    <fullName>L551</fullName>
                </value>
                <value>
                    <fullName>Old Nameplates</fullName>
                </value>
                <value>
                    <fullName>New Nameplates</fullName>
                </value>
                <value>
                    <fullName>Employee cars &amp; Fleet Buybacks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_AprilForecast__c</fullName>
        <label>April Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_MarchForecast__c</fullName>
        <label>March Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_AugustForecast__c</fullName>
        <label>August Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_JanuaryForecast__c</fullName>
        <label>January Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_OctoberForecast__c</fullName>
        <label>October Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_DecemberForecast__c</fullName>
        <label>December Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_FebruaryForecast__c</fullName>
        <label>February Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_NovemberForecast__c</fullName>
        <label>November Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Market_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Market Summary</label>
        <referenceTo>OUV_AnnualMarketSummary__c</referenceTo>
        <relationshipName>OUV_Forecast_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Forecast_Snapshot__c</fullName>
        <label>OUV Forecast Snapshot</label>
        <referenceTo>OUV_Forecast_Snapshot__c</referenceTo>
        <relationshipName>OUV_Forecast_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OUV_SeptemberForecast__c</fullName>
        <label>September Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Snapshot_Name__c</fullName>
        <formula>OUV_Forecast_Snapshot__r.Annual_Market_Summary__r.OUV_AnnualMarketSummaryName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Snapshot Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Category__c</fullName>
        <formula>CASE(OUV_Reporting_Category_Level_2__c, &quot;Terms of Employment&quot;, &quot;Unactionable&quot;, &quot;Job Related&quot;, &quot;Unactionable&quot;,&quot;Press/PR&quot;,&quot;Active&quot;,&quot;Corporate Social Responsibility (CSR)&quot;,&quot;Active&quot;,&quot;VIP Loans&quot;,CASE(OUV_Reporting_Category_Level_3__c,&quot;Royal Household (RHH)&quot;,&quot;Active&quot;,&quot;VIP - Individual (Free of Charge)&quot;,&quot;Active&quot;,&quot;VIP - Individual (Charged)&quot;,&quot;Unactionable&quot;,&quot;VIP - Corporate&quot;,&quot;Active&quot;,&quot;&quot;),&quot;Launch / Events&quot;,&quot;Active&quot;,&quot;Training&quot;,&quot;Active&quot;,&quot;JLR Experience&quot;,&quot;Active&quot;,&quot;Sponsorship&quot;,&quot;Active&quot;,&quot;Marketing Asset Production&quot;,&quot;Active&quot;,&quot;Product Placement&quot;,&quot;Active&quot;,&quot;Demonstrators&quot;,&quot;Active&quot;,&quot;Homologation Cars&quot;,&quot;Active&quot;,&quot;Customer Service - Diagnostics / Methods / Product Investigation / Training&quot;,&quot;Active&quot;,&quot;Customer Service - Loan Vehicles&quot;,&quot;Active&quot;,&quot;Product Development Vehicles&quot;,&quot;Active&quot;,&quot;Manufacturing/Support Functions Vehicles&quot;,&quot;Active&quot;,&quot;Pool Cars&quot;,&quot;Active&quot;,&quot;All Other&quot;,&quot;Active&quot;,&quot;Cars awaiting sale / rework / disposal&quot;,&quot;Inactive&quot;,&quot;Fleet Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,&quot;Employee vehicle returns/MRC Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,&quot;Classic Donor vehicles&quot;,&quot;Inactive&quot;,&quot;Customer Buybacks&quot;,&quot;Inactive&quot;,&quot;Fleet Buybacks&quot;,&quot;Unactionable&quot;,&quot;Written Down/Provisioned Units (£1 vehicles)&quot;,&quot;Unactionable&quot;,&quot;Heritage/Museum Vehicles&quot;,&quot;Unactionable&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Category_Level_1__c</fullName>
        <label>Reporting Category Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee Cars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Buybacks</fullName>
                </value>
                <value>
                    <fullName>Expensed Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Category_Level_2__c</fullName>
        <label>Reporting Category Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Terms of Employment</fullName>
                </value>
                <value>
                    <fullName>Job Related</fullName>
                </value>
                <value>
                    <fullName>Press/PR</fullName>
                </value>
                <value>
                    <fullName>Corporate Social Responsibility (CSR)</fullName>
                </value>
                <value>
                    <fullName>VIP Loans</fullName>
                </value>
                <value>
                    <fullName>Launch/Events</fullName>
                    <label>Launch / Events</label>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>JLR Experience</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Marketing Asset Production</fullName>
                </value>
                <value>
                    <fullName>Product Placement</fullName>
                </value>
                <value>
                    <fullName>Demonstrators</fullName>
                </value>
                <value>
                    <fullName>Homologation Cars</fullName>
                </value>
                <value>
                    <fullName>Customer Service -Diagnostics/Methods/Product Investigation/Training</fullName>
                    <label>Customer Service - Diagnostics / Methods / Product Investigation / Training</label>
                </value>
                <value>
                    <fullName>Customer Service - Loan Vehicles</fullName>
                </value>
                <value>
                    <fullName>Product Development Vehicles</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Support Functions Vehicles</fullName>
                </value>
                <value>
                    <fullName>Pool Cars</fullName>
                </value>
                <value>
                    <fullName>All Other</fullName>
                </value>
                <value>
                    <fullName>Cars awaiting sale / rework / disposal</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Employee vehicle returns/MRC Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Classic Donor vehicles</fullName>
                </value>
                <value>
                    <fullName>Customer Buybacks</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks</fullName>
                </value>
                <value>
                    <fullName>Written Down/Provisioned Units (£1 vehicles)</fullName>
                </value>
                <value>
                    <fullName>Heritage/Museum Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Category_Level_3__c</fullName>
        <label>Reporting Category Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Royal Household (RHH)</fullName>
                </value>
                <value>
                    <fullName>VIP - Corporate</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Charged)</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Free of Charge)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>OUV_Forecast_Detail_Editable</fullName>
        <active>true</active>
        <description>Record Type for when the status of Forecast Snapshot is &quot;In Progress&quot;.</description>
        <label>OUV Forecast Detail Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_Forecast_Detail_Read_Only</fullName>
        <active>true</active>
        <description>Record Type for when the status of Forecast Snapshot is &quot;Submitted&quot;.</description>
        <label>OUV Forecast Detail Read Only</label>
    </recordTypes>
</CustomObject>